--- a/src/components/About-Section/About.css
+++ b/src/components/About-Section/About.css
@@ -203,10 +203,13 @@ width: 100%;
     }
 
     #about-img {
-    
         height: 100%;
         width: 100%;
        
+    }
+
+    #about-para {
+        padding: 20px;
     }
 
 
