--- a/src/components/Projects/Projects-2.css
+++ b/src/components/Projects/Projects-2.css
@@ -114,3 +114,8 @@ text-shadow: 10px 10px black;
     padding: 30px;
 }
 }
+
+
+@media screen and(min-width: 2000px) {
+
+}
